...
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object DrawScreenTestTags {
    const val BACK_BUTTON = "drawing:back_button"
    const val TITLE = "drawing:title"
    const val UNDO_BUTTON = "drawing:undo_button"
    const val REDO_BUTTON = "drawing:redo_button"
    const val MORE_OPTIONS_BUTTON = "drawing:more_options_button"
    const val COPY_MENU_ITEM = "drawing:copy_menu_item"
    const val SEND_MENU_ITEM = "drawing:send_menu_item"
    const val DELETE_MENU_ITEM = "drawing:delete_menu_item"
    const val DRAWING_BAR = "drawing:drawing_bar"
    const val BOARD = "drawing:board"
    const val ROOT = "drawing:root"
}

